--- a/package.json
+++ b/package.json
@@ -1,51 +1,43 @@
 {
-  "name": "solidocity",
-  "version": "1.0.5",
-  "main": "dist/index.js",
-  "module": "dist/esm/index.js",
-  "typings": "dist/typings/index.d.ts",
+  "name": "solid-context",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "build": "tsc --watch",
-    "bundle:watch": "hypertype node --watch",
-    "bundle:prod": "hypertype node --prod",
-    "bundle:prod:stats": "hypertype node --prod --stats",
-    "publish&version": "npm version patch && npm publish",
-    "test": "jest"
+    "build": "ttsc --watch",
+    "bundle:watch": "hypertype web --watch --run",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "peerDependencies": {
-    "node-fetch": "^2.6.0",
-    "rdf-namespaces": "^1.8.0"
+  "dependencies": {
+    "@hypertype/app": "^3.3.17",
+    "@hypertype/core": "^3.3.17",
+    "@hypertype/infr": "^3.3.17",
+    "@hypertype/ui": "^3.3.17",
+    "fabric": "^3.6.3",
+    "luxon": "^1.24.1",
+    "rdf-namespaces": "^1.8.0",
+    "solid-auth-client": "^2.4.1",
+    "solidocity": "^1.1.4"
   },
-  "files": [
-    "dist",
-    "readme.md"
-  ],
   "devDependencies": {
     "@hypertype/tools": "^3.3.17",
     "@types/jest": "^25.2.3",
+    "@types/luxon": "^1.24.0",
     "@types/node": "^14.0.4",
     "jest": "^26.0.1",
-    "mime-types": "^2.1.27",
-    "n3": "^1.3.7",
-    "node-fetch": "^2.6.0",
-    "rdf-namespaces": "^1.8.0",
-    "rdflib": "^1.2.2",
-    "solid-auth-cli": "^1.0.14",
-    "solid-file-client": "^1.0.5",
-    "solid-file-fns": "^1.0.0",
     "symbol-observable": "^1.2.0",
-    "tripledoc": "^4.3.4",
     "ts-jest": "^26.0.0",
-    "typescript": "^3.9.3"
+    "ttypescript": "^1.5.10",
+    "typescript": "3.7.4"
   },
   "hypertype": {
-    "node": {
-      "index": "./dist/esm/index.js",
-      "type": "node"
+    "web": {
+      "index": "./dist/esm/entry/index.js",
+      "html": "./entry/index.html",
+      "type": "server"
     }
   }
 }
