--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -45,7 +45,7 @@ jobs:
       
     # Runs a single command using the runners shell
     - name: Build typescript
-      run: ttsc
+      run: npx tsc
 
     # Runs a set of commands using the runners shell
     - name: Bundle production
