--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -38,7 +38,6 @@ jobs:
         # Deprecated. Use node-version instead. Will not be supported after October 1, 2019
         #version: # optional
 
-
     # Runs a single command using the runners shell
     - name: Install deps
       run: npm i
@@ -49,44 +48,7 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: Bundle production
-      run: npm run build:prod
-      
-    - name: GitHub Pages action
-      uses: peaceiris/actions-gh-pages@v3.6.1
-      with:
-        # Set a SSH private key from repository secret value for pushing to the remote branch.
-        # deploy_key: # optional
-        # Set a generated GITHUB_TOKEN for pushing to the remote branch.
-        github_token: $GITHUB_TOKEN
-        # Set a personal access token for pushing to the remote branch.
-        #personal_token: # optional
-        # Set a target branch for deployment.
-        publish_branch: master # optional, default is gh-pages
-        # Set an input directory for deployment.
-        publish_dir: dist # optional, default is public
-        # Set an external repository (owner/repo).
-        external_repository: franzzua/solid-context # optional
-        # If empty commits should be made to the publication branch
-        #allow_empty_commit: # optional, default is false
-        # If existing files in the publish branch should be not removed before deploying
-        #keep_files: # optional, default is false
-        # Keep only the latest commit on a GitHub Pages branch
-        force_orphan: true # optional, default is false
-        # Set Git user.name
-        #user_name: # optional
-        # Set Git user.email
-        #user_email: # optional
-        # Set a custom commit message with a triggered commit hash
-        #commit_message: # optional
-        # Set a custom full commit message without a triggered commit hash
-        #full_commit_message: # optional
-        # Set tag name
-        #tag_name: # optional
-        # Set tag message
-        #tag_message: # optional
-        # Enable the GitHub Pages built-in Jekyll
-        #enable_jekyll: # optional, default is false
-        # An alias for enable_jekyll to disable adding .nojekyll file to master or gh-pages branches
-        #disable_nojekyll: # optional, default is false
-        # Set custom domain
-        #cname: # optional
+      run: npm run bundle:prod
+
+    - name: deploy to solid
+      run: node publish.js
