--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -35,13 +35,16 @@ jobs:
       run: |
         npm i pnpm -g
         pnpm i
-
-    - name: cache nodemodules
-        id: cache-primes
-        uses: actions/cache@v2
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-primes
+        
+    - name: Cache
+      uses: actions/cache@v2.0.0
+      with:
+        # A list of files, directories, and wildcard patterns to cache and restore
+        path: node_modules
+        # An expli cit key for restoring and saving the cache
+        key: nm
+        # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
+        # restore-keys: # optional
       
     # Runs a single command using the runners shell
     - name: Build typescript
