--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -30,22 +30,26 @@ jobs:
         node-version: 12.16 # optional, default is 10.x
 
 
+        
+    - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
     # Runs a single command using the runners shell
     - name: Install deps
       run: |
         npm i pnpm -g
         pnpm i
-        
-    - name: Cache
-      uses: actions/cache@v2.0.0
-      with:
-        # A list of files, directories, and wildcard patterns to cache and restore
-        path: node_modules
-        # An expli cit key for restoring and saving the cache
-        key: nm
-        # An ordered list of keys to use for restoring the cache if no cache hit occurred for key
-        # restore-keys: # optional
-      
+
     # Runs a single command using the runners shell
     - name: Build typescript
       run: npx ttsc
