--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -61,5 +61,5 @@ jobs:
     - name: deploy to solid
       run: node publish.js
       env:
-        SOLID_USERNAME: {{ secrets.SOLID_USERNAME }}
-        SOLID_PASSWORD: {{ secrets.SOLID_PASSWORD }}
+        SOLID_USERNAME: ${{ secrets.SOLID_USERNAME }}
+        SOLID_PASSWORD: ${{ secrets.SOLID_PASSWORD }}
