--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "ttsc --watch",
     "server:watch": "hypertype web --watch",
+    "server:run:watch": "hypertype web --watch --run",
     "worker:watch": "hypertype worker --watch",
     "bundle:prod": "hypertype web --prod",
     "bundle": "hypertype web",
@@ -19,6 +20,7 @@
     "@hypertype/app": "^3.3.17",
     "@hypertype/core": "^3.3.17",
     "@hypertype/infr": "^3.3.17",
+    "@hypertype/infr-browser": "^3.4.11",
     "@hypertype/ui": "^3.3.17",
     "fabric": "^3.6.3",
     "luxon": "^1.24.1",
@@ -41,7 +43,7 @@
   },
   "hypertype": {
     "web": {
-      "index": "./dist/esm/entry/index.js",
+      "index": "./entry/index.ts",
       "html": "./entry/index.html",
       "type": "server"
     },
